More fixes for homepage on mobile devices

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -93,79 +93,25 @@
         font-size: 17px;
       }
     }
-    &-content-charli {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      padding: 20px;
-      z-index: 1;
-  
-      &-intro {
-        font-size: 17px;
-      }
-    }
   }
-
-
-  .hero-section-charli{
-    height: 430px;
-    width: 400px;
-    margin-bottom: 20px;
-    h2 {
-      color: white;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-  
-    perspective: 1000px;
-    color: rgb(255, 255, 255);
-    width: 400px;
-    position: relative;
-  
-    &-content {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      padding: 20px;
-      z-index: 1;
-  
-      &-intro {
-        font-size: 17px;
-      }
-    }
-    &-content-charli {
-      position: absolute;
-      width: 100%;
-      padding: 20px;
-      z-index: 1;
-  
-      &-intro {
-        font-size: 17px;
-      }
-    }
-  }
-
 
   .image {
     width: 100%;
+    min-width: 100%;
     height: 100%;
+    position: center;
     object-fit: scale-down;
     background-repeat: no-repeat;
     background-position: center;
   }
 
   .image-1 {
-    width: 100%;
-    object-fit: scale-down;
     background-image: url('/images/section-1.png');
   }
   
   .image-2 {
-    background-position: center;
-    width: 100%;
     box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
     border: 2px solid #3bace5;
-    object-fit: scale-down;
     background-image: url('/images/charliandben4.jpg');
   }
   
